superscript alignment fix (better)

--- a/src/style.sass
+++ b/src/style.sass
@@ -57,7 +57,7 @@ body
     font-family: $body
     line-height: 1.5
 
-.footnote-ref
+sup
     line-height: 1
 
 pre, code, .deemph
@@ -522,8 +522,3 @@ textarea.squiggle
 
 .header
     border-top: solid 6px var(--stripe, transparent)
-
-sup
-    vertical-align: top
-    position: relative
-    top: -0.3em
